Fix main dashboard spacing issues

--- a/source/displayTasks/displayTasks.css
+++ b/source/displayTasks/displayTasks.css
@@ -10,7 +10,6 @@ h1 {
     background-color: #F6F6F6;
     padding: 10px;
     border-radius: 12px;
-    margin: 20px;
 
     width: 350px;
     height: 500px;
