--- a/source/index.css
+++ b/source/index.css
@@ -27,4 +27,7 @@ article {
 section {
     display: flex;
     flex-direction: row;
+
+    gap: 16px;
+    padding: 20px;
 }
